# RiverBorn

./: Cargo.toml  README.md
crates/game_core/: Cargo.toml
crates/game_core/src/: ai.rs  cards.rs  combat.rs  game.rs  lib.rs  player.rs  rng.rs  table.rs
crates/riverborn/: Cargo.toml
crates/riverborn/assets/: README.md
crates/riverborn/assets/audio/: README.md
crates/riverborn/src/: main.rs
crates/riverborn_net/: Cargo.toml
crates/riverborn_net/src/: lib.rs
crates/riverborn_server/: Cargo.toml  README.md
crates/riverborn_server/src/: main.rs
