[package]
name = "riverborn_server"
version.workspace = true
edition.workspace = true
license.workspace = true

# headless 权威服务器：跑在公网机器上。裸 renet（不依赖 bevy）。
[dependencies]
game_core = { path = "../game_core" }
riverborn_net = { path = "../riverborn_net" }
# 与客户端钉死同一版本（=1.0.0），保证 netcode 握手一致、且 bevy_ecs 不冲突。
renet = "=1.0.0"
renet_netcode = "=1.0.0"
serde_json = { workspace = true }
